backend/metasfresh-dist/dist/src/main/kubernetes-legacy/manifests/dev/print/metasfresh-print-ing_demouser_demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "metasfresh-print-mf15-dev"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "hello-world-svc"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - "demouser-demo.metasfresh.com"
      secretName: tls-certificate
  rules:
  - host: "demouser-demo.metasfresh.com"
    http:
      paths:
      - path: /api/printing
        backend:
          serviceName: "metasfresh-print-mf15-dev"
          servicePort: 8080
